tests/errors/bad_not1.asm
FUNC LABEL 0
    MOV STK A VAL 9
    NOT STK A
    PRINT STK A
    RET
